src/objects/vlocity_ins__QuoteAppliedPromotion__c.object
<CustomObject>
    <description>Represents the request to apply a promotion to a customer&apos;s subscriptions and other assets within a given quote. The request indicates whether the promotion is to be applied to a specific asset, to the contract affected by the order or to a specified billing account. The quote applied promotion indicates the expected duration of the customer&apos;s commitment and pricing benefits.</description>
    <fields>
        <fullName>vlocity_ins__Action__c</fullName>
        <description>The action requested in this quote for this applied promotion with values such as Add, Change, Disconnect, Existing. Existing means no change requested.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__AppliesTo__c</fullName>
        <description>Identifies to what the promotional pricing will be applied: to a specific asset, to multiple assets, to a contract or to an account.</description>
        <label>Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Multiple Assets</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the account to which the promotional pricing is applied. Used when the promotion is applied to all charges made to this account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quote Applied Promotions</relationshipLabel>
        <relationshipName>QuoteAppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CommitmentEndDate__c</fullName>
        <description>The commitment end date for the services provided under this promotion if this quote becomes a submitted order. Penalties may be incurred for exiting out of the promotional conditions during the commitment period.</description>
        <label>Commitment End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CommitmentStartDate__c</fullName>
        <description>The commitment start date for the services provided under this promotion if this quote becomes a submitted order. Penalties may be incurred for exiting out of the promotional conditions during the commitment period.</description>
        <label>Commitment Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quote Applied Promotions</relationshipLabel>
        <relationshipName>QuoteAppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FulfilmentStatus__c</fullName>
        <description>The status of fulfillment of this applied promotion with values such as Draft, In Progress, Activated, Superseded, Cancelled, Point of No Return, Pending.</description>
        <label>Fulfilment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>PONR</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingEndDate__c</fullName>
        <description>The end date of the promotional pricing if this quote becomes a submitted order.</description>
        <label>Benefit End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingStartDate__c</fullName>
        <description>The start date of the promotional pricing if this quote becomes a submitted order.</description>
        <label>Benefit Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the promotion applied.</description>
        <label>Promotion</label>
        <referenceTo>vlocity_ins__Promotion__c</referenceTo>
        <relationshipLabel>Quote Applied Promotions</relationshipLabel>
        <relationshipName>QuoteAppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteId__c</fullName>
        <description>(Required) Identifies the parent quote for this quote applied promotion.</description>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Applied Promotions</relationshipLabel>
        <relationshipName>QuoteAppliedPromotions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the line item (therefore asset) to which the promotional pricing will be applied. Used when a promotion will be applied to a specific asset.</description>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Applied Promotions</relationshipLabel>
        <relationshipName>QuoteAppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReasonForCancellation__c</fullName>
        <description>Text describing the reason why the customer wants to cancel their participation in the promotion.</description>
        <label>Reason for Cancellation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequestDate__c</fullName>
        <description>Date requested for the application or cancellation of the customer&apos;s participation in this promotion.</description>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sequence__c</fullName>
        <description>Sequence in which this promotion is applied to the customer&apos;s asset or assets. Used to properly calculate discounted pricing.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubAction__c</fullName>
        <description>The sub-action requested in this quote for this applied promotion with values such as Move or Cancel.</description>
        <label>Sub Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Applied Promotion</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Applied Promotions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>